# deepsecurity

./: .gitignore  README.md
cloundagent/: filetype.py  testwrite.c
src/: all.mgc  todo-bobo
src/ATI/ACI/: X509Certificate.cs  checksig.py  decompress.py  dirtest.py  fileusing.py  logger.py  monitordir.py  sophos.py  uploadfile.py  uploadtocloud.py  uploadurl.py  utils.py
src/ATI/Analyzer/: analyzer.config  analyzer_config.py  dirutil.py  fileusing.py  monitordir.py  postersophosforensic.py  utils.py
src/ATI/Decompression/: decompress.py  todo  upload.py
src/ATI/FileType/: filetype.py  fileusing.py
src/ATI/Logger/: logger.py
src/ATI/SandboxClient/: httpmeta.py  readmetafromlog.py  (+2 more)
src/cloudagent/: filetypetest.py  monitordir.py
src/cloudserver/: base64rw.py  incident.json  policy.py  poster.py  sbxcapturesender.py  sbxlogserver.py  sbxuwsgi.py  testlogserver.py
src/killerfinder/: CMakeLists.txt
src/killerfinder/db/: 2_domain.txt  2_hostname.txt  2_ipv4.txt
src/killerfinder/packet/: killer-finder-socket.pcap  killer-finder-wlan0.pcap
src/killerfinder/src/: CConfig.cpp  CDBManager.hpp  CHttpInfo.cpp  CHttpInfo.hpp  CHttpInfoMap.cpp  CHttpInfoMap.hpp  CHttpTxnDecoder.hpp  CIpAddress.cpp  CL2Info.cpp  CL2Info.hpp  CL3Info.cpp  CLock.hpp  CLog.hpp  CMailInfo.hpp  CMain.cpp  CMakeLists.txt  CObject.cpp  CPacketCaptureThread.cpp  CPacketCaptureThread.hpp  CPacketHandler.hpp  CSessionMap.hpp  CSmtpTxnDecoder.cpp  CTcpSessionId.cpp  CTcpSessionId.hpp  CTcpSessionPlugin.cpp  CTcpSessionPool.cpp  packet_def.hpp
src/killerfinder/src/test/: testSmtpTxnDecoder.cpp  testString.cpp
(+236 files in other folders)
