CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(Killer-Finder)

SET(CMAKE_C_COMPILER "g++")

MESSAGE(STATUS "Project: killer-finder")
MESSAGE(STATUS "Source Directory: ${PROJECT_SOURCE_DIR}")
MESSAGE(STATUS "Binary Directort: ${PROJECT_BINARY_DIR}")

SET(CMAKE_BUILE_TYPE DEBUG)
SET(CMAKE_CXX_FLAGS "-g -Wall -std=gnu++11")



ADD_SUBDIRECTORY(src ../bin)
SET(CMAKE_INSTALL_PREFIX /usr/local/killer)

INSTALL(PROGRAMS bin/killer-finder.sh DESTINATION bin)
INSTALL(PROGRAMS config/config.xml DESTINATION etc)
INSTALL(DIRECTORY db/ DESTINATION db)

